--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "eslint ./src/"
   },
   "dependencies": {
-    "on-covid-19": "^0.1.3"
+    "body-parser": "^1.19.0",
+    "easyxml": "^2.0.1",
+    "express": "^4.17.1",
+    "on-covid-19": "^0.1.3",
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
