--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "lint": "eslint ./src/"
+    "lint": "eslint ./src/",
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -13,6 +14,10 @@
     "express": "^4.17.1",
     "on-covid-19": "^0.1.3",
     "save": "^2.4.0"
+  },
+  "engines":{
+    "node":"10.16.3"
+    
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
